--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 /dist
 /tmp
 /out-tsc
+/.firebase
 # Only exists if Bazel was run
 /bazel-out
 
 # dependencies
 /node_modules
+*.cache
 
 # profiling files
 chrome-profiler-events*.json
