--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~8.2.11",
     "firebase": "^7.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
