--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
     "@angular/fire": "^5.3.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.2.11",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.11",
@@ -25,6 +26,7 @@
     "firebase": "^7.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ngx-auth-firebaseui": "^3.5.0",
     "ngx-moment": "^3.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
