--- a/firebase.json
+++ b/firebase.json
@@ -11,10 +11,12 @@
   },
   "hosting": {
     "public": "dist/AngPicNicV2",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   },
   "storage": {
