--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
+    "@angular/pwa": "^0.900.3",
     "@angular/router": "~8.2.11",
+    "@angular/service-worker": "~8.2.11",
     "firebase": "^7.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
