--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       uses: lowply/deploy-firebase@v0.0.2
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        FIREBASE_PROJECT: ater-media-dev
+        FIREBASE_PROJECT: PicNic-Dev
     - name: Purge cache
       uses: jakejarvis/cloudflare-purge-action@master
       env:
