--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       uses: lowply/deploy-firebase@v0.0.2
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        FIREBASE_PROJECT: PicNic-Dev
+        FIREBASE_PROJECT: picnic-dev-v1
     - name: Purge cache
       uses: jakejarvis/cloudflare-purge-action@master
       env:
