--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Build and Deploy
+name: Deploy To Firebase
 on:
   push:
     branches:
