--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,26 +5,26 @@ name: Deploy To Firebase
 on:
   push:
     branches:
-    - develop
+      - master
 jobs:
   main:
     name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@develop
-    - name: NPM i
-      run: npm i
-    - name: Build App
-      run: npm run build
-    - name: Deploy to Firebase
-      uses: lowply/deploy-firebase@v0.0.2
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        FIREBASE_PROJECT: picnic-dev-v1
-    - name: Purge cache
-      uses: jakejarvis/cloudflare-purge-action@master
-      env:
-        # Zone is required by both authentication methods
-        CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-        CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+      - name: Check out code
+        uses: actions/checkout@master
+      - name: NPM i
+        run: npm i
+      - name: Build App
+        run: npm run build
+      - name: Deploy to Firebase
+        uses: lowply/deploy-firebase@v0.0.2
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_PROJECT: picnic-dev-v1
+      - name: Purge cache
+        uses: jakejarvis/cloudflare-purge-action@master
+        env:
+          # Zone is required by both authentication methods
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
